# keifu

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.beads/: .beads-credential-key  dolt-server.activity  last-touched  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.beads/dolt/: config.yaml
.beads/dolt/.dolt/: config.json
.beads/dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.doltcfg/: privileges.db
.beads/dolt/keifu/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.claude/skills/debug-tui/: SKILL.md
docs/: README_JA.md  TODO.md  architecture.md  configuration.md  debugging.md  design-interactive-rebase.md  dummy-pr-test.md  squash-live-test.md  vscode-parity.md
examples/: dump_cells.rs  gap_scan.rs  raster_debug.rs  render_rows.rs
src/: action.rs  app.rs  avatar.rs  avatar_fetch.rs  checks.rs  config.rs  conflict.rs  debug_server.rs  diff_cache.rs  diff_view.rs  event.rs  external_edit.rs  files_pane.rs  files_pane_state.rs  gh.rs  graph_nav.rs  interval_fetch.rs  issue.rs  issue_action.rs  keybindings.rs  lib.rs  logging.rs  main.rs  merge_base.rs  merged_branch_fetch.rs  merged_cache.rs  mouse.rs  network.rs  palette.rs  perf.rs  pr.rs  pr_action.rs  pr_thread.rs  search.rs  settings.rs  signature_guarded.rs  test_support.rs  text_editor.rs  toast.rs  tui.rs  (+3 more)
src/app/: branch_picker_actions.rs  ci_checks_actions.rs  commit_editor_actions.rs  commit_menu_actions.rs  compare_actions.rs  confirm_actions.rs  conflict_actions.rs  credentials.rs  file_diff_actions.rs  file_history_actions.rs  file_ops.rs  graph_actions.rs  init.rs  input_actions.rs  issue_actions.rs  mod.rs  mouse_actions.rs  network_ops.rs  palette_actions.rs  pr_action_actions.rs  pr_thread_actions.rs  refresh.rs  remote_ops.rs  search_ops.rs  status_message.rs  undo_actions.rs
src/git/: askpass.rs  branch.rs  commit.rs  diff.rs  graph.rs  merged.rs  mod.rs  operations.rs  patch.rs  repository.rs
src/graph/: colors.rs
src/ui/: branch_filter.rs  ci_checks.rs  command_palette.rs  commit_detail.rs  commit_menu.rs  dialog.rs  file_diff_view.rs  file_icons.rs  files_pane.rs  graph_pixels.rs  graph_view.rs  help_popup.rs  issue_compose.rs  issue_detail.rs  issue_list.rs  metadata_menu.rs  mod.rs  modal.rs  pr_compose.rs  pr_thread.rs  search_dropdown.rs  settings_menu.rs  status_bar.rs  theme.rs
src/ui/graph_view/: badges.rs  chips.rs  geometry.rs  metrics.rs  mod.rs  pixel_dim.rs  row.rs  rows.rs
tests/: app_behavior_test.rs  app_staging_test.rs  commit_menu_push_test.rs  git_operations_test.rs  graph_test.rs  hunk_staging_test.rs  incremental_loading_test.rs  keybindings_test.rs  merge_base_test.rs  merge_conflict_app_test.rs  merged_cache_startup_test.rs  perf_regression_test.rs  pull_remote_test.rs  refresh_fast_forward_test.rs  remote_app_test.rs  selection_logic_test.rs  squash_real_world_test.rs  trunk_detection_test.rs  undo_test.rs  untracked_working_tree_test.rs  viewer_features_test.rs
tests/common/: mod.rs
