[package]
name = "keifu"
version = "0.3.0"
edition = "2021"
description = "A TUI tool to visualize Git commit graphs with branch genealogy"
license = "MIT"
authors = ["trasta298"]
repository = "https://github.com/trasta298/keifu"
readme = "README.md"
keywords = ["git", "tui", "cli", "graph", "visualization"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

# Diff
similar = { version = "2.7", features = ["inline"] }

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Search
fuzzy-matcher = "0.3"

# File operations
trash = "5"

# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.17"
