[package]
name = "keifu"
version = "0.3.0"
edition = "2021"
description = "A TUI tool to visualize Git commit graphs with branch genealogy"
license = "MIT"
authors = ["trasta298"]
repository = "https://github.com/trasta298/keifu"
readme = "README.md"
keywords = ["git", "tui", "cli", "graph", "visualization"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Pixel-rendered graph (terminal image protocols). Default features pull in
# chafa (a C library needing pkg-config), which we don't use — only the Kitty
# and iTerm2 protocols, which are pure Rust.
ratatui-image = { version = "9", default-features = false, features = ["crossterm"] }
# Avatars arrive as PNG or JPEG; both decoders are needed. (ratatui-image's own
# image dep may not enable jpeg, so we enable it on our direct dependency.)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# MD5 for Gravatar hashes and avatar cache filenames. Pure Rust, no deps — never
# openssl (see the git2/network policy above).
md5 = "0.7"

# Git — network transports (https/ssh, and with them openssl-sys) are
# unused: fetch/push shell out to the git CLI (see git/operations.rs).
git2 = { version = "0.19", default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

# Diff
similar = { version = "2.7", features = ["inline"] }

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Search
fuzzy-matcher = "0.3"

# File operations
trash = "5"

# Terminal detection
terminal-light = "1.8"

# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
notify = "6"

# Debug / logging (--log-file, --debug-listen)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.17"
filetime = "0.2"
